--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,11 +1,11 @@
 /* Import font icons */
 @font-face {
     font-family: "brands";
-    src: url("./fonts/fa-brands-400.eot");
-    src: url("./fonts/fa-brands-400.eot?#iefix") format("embedded-opentype"),
-        url("./fonts/fa-brands-400.woff") format("woff"),
-        url("./fonts/fa-brands-400.ttf") format("truetype"),
-        url("./fonts/fa-brands-400.svg#brands") format("svg");
+    src: url("../fonts/fa-brands-400.eot");
+    src: url("../fonts/fa-brands-400.eot?#iefix") format("embedded-opentype"),
+        url("../fonts/fa-brands-400.woff") format("woff"),
+        url("../fonts/fa-brands-400.ttf") format("truetype"),
+        url("../fonts/fa-brands-400.svg#brands") format("svg");
         font-weight: normal;
         font-style: normal;
 }
@@ -697,7 +697,15 @@ footer ul li a {
     .thumbnail-list {
         grid-template-columns: repeat(2,1fr);
         grid-gap: 30px;
-    }      
+    }
+
+    /* Websites section */
+
+    .websites-list {
+        grid-template-columns: 1fr;
+        grid-gap: 10px;
+    }
+
 }
 
 /* Media query max 471px width */
@@ -714,7 +722,14 @@ footer ul li a {
     .thumbnail-list {
         grid-template-columns: 1fr;
         grid-gap: 10px;
-    }      
+    }
+    
+    /* Websites section */
+
+    .websites-list {
+        grid-template-columns: 1fr;
+        grid-gap: 10px;
+    }
 }
 
 
