--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -19,6 +19,7 @@
 
 :root {
     --scarlet: #793236;
+    --backwhite: rgba(255, 255, 255, 0.925);
 }
 
 html {
@@ -46,7 +47,7 @@ margin: 0;
     display: grid;
     position: fixed;
     margin: 0 auto;
-    background-color: rgba(255, 255, 255, 0.925);
+    background-color: var(--backwhite);
     z-index: 1;
     left: 50%;
     transform: translate(-50%, 0);
@@ -69,6 +70,21 @@ margin: 0;
     margin: 30px auto 20px auto;
 }
 
+.stlog0 {
+    stroke-dasharray: 0;
+    stroke-dashoffset: 0;
+    animation: dash 5s linear;
+  }
+  
+  @keyframes dash {
+    from {
+      stroke-dashoffset: 1000;
+    }
+    to {
+      stroke-dashoffset: 0;
+    }
+  }
+  
 .circle-nav {
     width: 25px;
     height: 25px;
@@ -145,46 +161,54 @@ main {
 
 /* Skyline animation */
 
-#Buildings.buildings {
-    transform: translateX(-3000px);
-    transition: 40s;
-}
+// #Buildings {
+//     animation: mymove 5s infinite;
+//     position: relative;
+// }
 
-#Clouds.clouds {
-    transform: translateX(100px);
-    transition: 10s;
-}
+// #Buildings.buildings {
+//     transform: translateX(-3000px);
+// }
 
-#Cloud1.clouds {
-    transform: translateX(1000px);
-    transform: scale(1.5);
-    transition: 100s;
-}
+// #Buildings.buildings {
+//     animation: mymove 20s infinite;
+// }
 
-#Cloud2 {
-    transform: translateX(-3000px);
-    transition: 40s;
-}
+// #Clouds.clouds {
+//     transform: translateX(100px);
+//     transition: 10s;
+// }
 
-#Cloud3 {
-    transform: translateX(-3000px);
-    transition: 40s;
-}
+// #Cloud1.clouds {
+//     transform: translateX(1000px);
+//     transform: scale(1.5);
+//     transition: 100s;
+// }
 
-#Cloud4 {
-    transform: translateX(-3000px);
-    transition: 40s;
-}
+// #Cloud2 {
+//     transform: translateX(-3000px);
+//     transition: 40s;
+// }
 
-#Cloud5.clouds {
-    transform: scale(1.3);
-    transition: 40s;
-}
+// #Cloud3 {
+//     transform: translateX(-3000px);
+//     transition: 40s;
+// }
 
-#Cloud6.clouds {
+// #Cloud4 {
+//     transform: translateX(-3000px);
+//     transition: 40s;
+// }
+
+// #Cloud5.clouds {
+//     transform: scale(1.3);
+//     transition: 40s;
+// }
+
+// #Cloud6.clouds {
     
-    transition: 40s;
-}
+//     transition: 40s;
+// }
 
 /* Arch portfolio section */
 
@@ -507,6 +531,10 @@ footer ul li:nth-child(2) {
     padding: 0 20px;
 }
 
+footer ul li:hover a{
+    color: var(--scarlet);
+}
+
 footer ul li a {
     font-family: brands, sans-serif;
     font-size: 2em;
@@ -548,8 +576,23 @@ footer ul li a {
 
     /* Nav bar */
 
+    .main-header {
+        background: none;
+    }
+
+    .main-header a {
+        background: var(--backwhite);
+    }
+
+    .main-header div a {
+        background: var(--backwhite);
+        padding: 5px 10px;
+        border-bottom: 1px solid var(--scarlet);
+    }
+    
     .navigation-bar {
         display: block;
+
     }
 
     .navigation-bar div div {
@@ -557,10 +600,12 @@ footer ul li a {
     }
 
     .circle-nav {
-        width: 30px;
-        height: 30px;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
         transition: 1s ease;
+        border: 7px solid var(--scarlet);
+        background: var(--backwhite);
     }
 
     .circle-nav:hover {
@@ -569,7 +614,12 @@ footer ul li a {
     }
 
     .navigation-list {
-        display: none;
+        opacity: 0.5;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        top: -400px;
+        transition: 1s ease;
     }
 
     .navigation-list-left {
@@ -577,8 +627,9 @@ footer ul li a {
     }
 
     .navigation-list.show-bar {
-        display: flex;
-        flex-direction: column;
+        opacity: 1;
+        font-size: 1.3em;
+        top: 0;
     }
 
     /* Home section */
