Change about section content

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -366,10 +366,9 @@ main {
 
 .about-content {
     display: flex;
-    background-color: var(--scarlet);
+    border: 1px dotted black;
     border-radius: 20px;
     padding: 100px 20px 20px 20px;
-    color: white;
 }
 
 .column {
